fix no duplicate bug

--- a/revue.ipynb
+++ b/revue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,30 +11,39 @@
     "from models import Works, Tags, engine\n",
     "from sqlalchemy.orm import Session\n",
     "import sqlite3\n",
+    "from constants import TAG_TYPES\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-03-13 21:52:26,508 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2023-03-13 21:52:26,509 INFO sqlalchemy.engine.Engine SELECT tags.title, works.last_updated \n",
-      "FROM works JOIN tags ON works.id = tags.work_id\n",
-      "2023-03-13 21:52:26,510 INFO sqlalchemy.engine.Engine [generated in 0.00065s] ()\n",
-      "2023-03-13 21:52:26,512 INFO sqlalchemy.engine.Engine COMMIT\n"
+      "2023-03-15 19:36:18,219 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2023-03-15 19:36:18,220 INFO sqlalchemy.engine.Engine SELECT tags.title, works.last_updated \n",
+      "FROM works JOIN tags ON works.id = tags.work_id \n",
+      "WHERE tags.type = ?\n",
+      "2023-03-15 19:36:18,220 INFO sqlalchemy.engine.Engine [cached since 182.3s ago] (1,)\n",
+      "2023-03-15 19:36:18,222 INFO sqlalchemy.engine.Engine SELECT tags.title, works.last_updated \n",
+      "FROM works JOIN tags ON works.id = tags.work_id \n",
+      "WHERE tags.type = ?\n",
+      "2023-03-15 19:36:18,222 INFO sqlalchemy.engine.Engine [cached since 182.3s ago] (1,)\n",
+      "2023-03-15 19:36:18,223 INFO sqlalchemy.engine.Engine COMMIT\n"
      ]
     }
    ],
    "source": [
-    "stmt = select(Tags.title, Works.last_updated).join(Tags)\n",
+    "stmt = select(Tags.title, Works.last_updated).join(Tags).where(Tags.type == TAG_TYPES['character'])\n",
     "with engine.connect() as conn, conn.begin():\n",
+    "    sqldata = conn.execute(stmt).mappings().all()\n",
     "    data = pandas.read_sql(stmt, conn)\n",
+    "\n",
+    "\n",
     "    "
    ]
   }
